Clean index.php from redirect URL Added optional 301 header

--- a/language/en-GB/en-GB.plg_system_feedcontrol.ini
+++ b/language/en-GB/en-GB.plg_system_feedcontrol.ini
@@ -1,3 +1,5 @@
 PLG_FEED_CONTROL_DESC="A Joomla plugin to control access to site feeds. Unless the menu item being visited is excluded, it will redirect requests that include format=feed to the page being requested, as well as remove the feed links from the page source."
 PLG_FEED_CONTROL_EXCLUSIONS_DESC="Select the menu items not to remove feed access to."
 PLG_FEED_CONTROL_EXCLUSIONS_LABEL="Excluded Menu Items"
+PLG_FEED_CONTROL_PERMANENT_DESC="If set to Yes, a HTTP/1.1 301 Moved Permanently header will be set."
+PLG_FEED_CONTROL_PERMANENT_LABEL="Permanent Redirects"
